kubernetes/test-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mein-test-webserver
  labels:
    app: test-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-webserver
  template:
    metadata:
      labels:
        app: test-webserver
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
