kubernetes/test-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-webserver-svc
spec:
  selector:
    app: test-webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
