kubernetes/test-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-webserver-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - test.woitzik.dev
    secretName: test-webserver-tls
  rules:
  - host: test.woitzik.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-webserver-svc
            port:
              number: 80
